--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "jade": "^1.11.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.1",
     "morgan": "^1.10.0",
     "nba": "^4.13.0",
     "nba-api-client": "^1.1.1",
