--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.1",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "nba": "^4.13.0",
     "nba-api-client": "^1.1.1",
