--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-openid-connect": "^2.0.0",
+    "express-session": "^1.17.1",
+    "helmet": "^4.2.0",
     "http-errors": "^1.7.3",
     "jade": "^1.11.0",
+    "jwks-rsa": "^1.11.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
@@ -18,15 +24,21 @@
     "morgan": "^1.10.0",
     "nba": "^4.13.0",
     "nba-api-client": "^1.1.1",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0",
+    "pug": "^3.0.0",
+    "pug-cli": "^1.0.0-alpha6",
     "standard": "^16.0.3"
   },
   "main": "app.js",
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "nodemon": "^2.0.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-modules app.js"
+    "server": "nodemon ./app.js",
+    "ui": "browser-sync start --config config/bs-config.js"
   },
   "author": "Matt Shenton",
   "license": "ISC",
