--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "node ./app,js",
+    "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon ./app.js",
     "ui": "browser-sync start --config config/bs-config.js"
