--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "nba": "^4.13.0",
     "nba-api-client": "^1.1.1",
+    "node-schedule": "^1.3.2",
     "passport": "^0.4.1",
     "passport-auth0": "^1.4.0",
     "pug": "^3.0.0",
